[package]
name = "zoi"
version = "0.1.3"
edition = "2021"
description = "A tool to manage your ssh connections"
keywords = ["cli", "ssh"]
homepage = "https://github.com/vthang95/zoi"
repository = "https://github.com/vthang95/zoi"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.4"
home = "0.5.5"
log = "0.4.20"
